# SDC-CDM

./: .env.example  .gitignore  ECP_MVP_README.md  README.md  docker-compose.yml  etl_test_output.json  fetch-ddls.sh  fetch-sqlite-wasm.sh  global.json  package-lock.json  package.json  requirements.txt
.config/: dotnet-tools.json
.devcontainer/: devcontainer.json
NAACRToOMOPmaps/: NAACCR_OMOP_Extension_Tables_by_ConceptClass.xlsx  NAACCR_PERSON_proposed.xlsx  extension_table_names.xlsx
NotebookTest/: NotebookTest.csproj  Program.cs
SdcCdmLib/: README.md  SdcCdmLib.sln
database/: .~lock.SDC CDM Requirements.xlsx#  Dockerfile  README.md  SDC CDM Requirements.xlsx  ddl_processor.py  docker-compose.yml  fetch-latest-ddls.py  fetch-latest-ddls.sh  update-ddl-files.py
db-utils/: README.md  cli.py  crud.py  import_sdc_form.py  import_vol_v_message.py  models.py  requirements.txt
discussions/: Evolution of OMOP modeling proposals: July 2025 through May 2026.md
notebooks/: .gitignore  README-EFCore-Notebook.md  README.md  fetch-latest-sqlite-wasm.sh  fetch-sqlite-wasm.sh  import_sdc_form_sqlite.py  import_vol_v_message_sqlite.py  serve_db.py  test_efcore.dib  test_omop_sdc_mvp.dib  try_sdc_cdm.ipynb  (+3 more)
phenoml-workflows/: .env.example  README.md  pyproject.toml  requirements.txt
phenoml-workflows/phenoml_workflows/: __init__.py  config.py  json_io.py  mapper.py  review_app.py  review_excel.py  review_schema.py  review_store.py  run_workflow.py
phenoml-workflows/sample/: naaccr-case.example.json
phenoml-workflows/workflows/: naaccr-to-omop.workflow.json
(+227 files in other folders)
